Added more time killers